--- a/poker-after-dark-web/angular.json
+++ b/poker-after-dark-web/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "pokerstats-web": {
+    "poker-after-dark-web": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -53,18 +53,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "pokerstats-web:build"
+            "browserTarget": "poker-after-dark-web:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "pokerstats-web:build:production"
+              "browserTarget": "poker-after-dark-web:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "pokerstats-web:build"
+            "browserTarget": "poker-after-dark-web:build"
           }
         },
         "test": {
@@ -98,7 +98,7 @@
         }
       }
     },
-    "pokerstats-web-e2e": {
+    "poker-after-dark-web-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "architect": {
@@ -106,11 +106,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "pokerstats-web:serve"
+            "devServerTarget": "poker-after-dark-web:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "pokerstats-web:serve:production"
+              "devServerTarget": "poker-after-dark-web:serve:production"
             }
           }
         },
@@ -126,5 +126,5 @@
       }
     }
   },
-  "defaultProject": "pokerstats-web"
+  "defaultProject": "poker-after-dark-web"
 }
