review- add name and description to web pom

--- a/poker-after-dark-web/pom.xml
+++ b/poker-after-dark-web/pom.xml
@@ -10,6 +10,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>poker-after-dark-web</artifactId>
+    <name>Poker After Dark Web</name>
+    <description>Angular application for Poker After Dark</description>
 
     <build>
         <plugins>
