--- a/poker-after-dark-spring/pom.xml
+++ b/poker-after-dark-spring/pom.xml
@@ -32,6 +32,10 @@
             <artifactId>poker-after-dark-specification</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.slusarz.pokerafterdark</groupId>
+            <artifactId>poker-after-dark-web</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
