--- a/poker-after-dark-web/pom.xml
+++ b/poker-after-dark-web/pom.xml
@@ -16,6 +16,45 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>com.googlecode.maven-download-plugin</groupId>
+                <artifactId>download-maven-plugin</artifactId>
+                <version>1.3.0</version>
+                <executions>
+                    <execution>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>wget</goal>
+                        </goals>
+                        <configuration>
+                            <url>https://canvasjs.com/fdm/chart/</url>
+                            <outputFileName>canvasjs.zip</outputFileName>
+                            <outputDirectory>${project.build.directory}</outputDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <version>1.8</version>
+                <executions>
+                    <execution>
+                        <phase>process-resources</phase>
+                        <configuration>
+                            <tasks>
+                                <echo message="unzipping file"/>
+                                <unzip src="target/canvasjs.zip"
+                                       dest="../poker-after-dark-web/node_modules/canvasjs-2.3.2"/>
+                            </tasks>
+                        </configuration>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
                 <groupId>com.github.eirslett</groupId>
                 <artifactId>frontend-maven-plugin</artifactId>
                 <version>1.3</version>
@@ -26,18 +65,21 @@
                 </configuration>
                 <executions>
                     <execution>
+                        <phase>process-resources</phase>
                         <id>install node and npm</id>
                         <goals>
                             <goal>install-node-and-npm</goal>
                         </goals>
                     </execution>
                     <execution>
+                        <phase>process-resources</phase>
                         <id>npm install</id>
                         <goals>
                             <goal>npm</goal>
                         </goals>
                     </execution>
                     <execution>
+                        <phase>process-resources</phase>
                         <id>prod</id>
                         <goals>
                             <goal>npm</goal>
@@ -45,7 +87,6 @@
                         <configuration>
                             <arguments>run-script prod</arguments>
                         </configuration>
-                        <phase>generate-resources</phase>
                     </execution>
                 </executions>
             </plugin>
