--- a/poker-after-dark-web/angular.json
+++ b/poker-after-dark-web/angular.json
@@ -31,6 +31,14 @@
             "scripts": []
           },
           "configurations": {
+            "mock": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.mock.ts"
+                }
+              ]
+            },
             "production": {
               "fileReplacements": [
                 {
@@ -56,6 +64,9 @@
             "browserTarget": "poker-after-dark-web:build"
           },
           "configurations": {
+            "mock": {
+              "browserTarget": "poker-after-dark-web:build:mock"
+            },
             "production": {
               "browserTarget": "poker-after-dark-web:build:production"
             }
