--- a/poker-after-dark-web/pom.xml
+++ b/poker-after-dark-web/pom.xml
@@ -13,12 +13,19 @@
     <name>Poker After Dark Web</name>
     <description>Angular application for Poker After Dark</description>
 
+    <properties>
+        <download-maven-plugin.version>1.3.0</download-maven-plugin.version>
+        <frontend-maven-plugin.version>1.3</frontend-maven-plugin.version>
+        <frontend-maven-plugin.nodeVersion>v10.16.3</frontend-maven-plugin.nodeVersion>
+        <frontend-maven-plugin.npmVersion>6.9.0</frontend-maven-plugin.npmVersion>
+    </properties>
+
     <build>
         <plugins>
             <plugin>
                 <groupId>com.googlecode.maven-download-plugin</groupId>
                 <artifactId>download-maven-plugin</artifactId>
-                <version>1.3.0</version>
+                <version>${download-maven-plugin.version}</version>
                 <executions>
                     <execution>
                         <phase>generate-sources</phase>
@@ -57,10 +64,10 @@
             <plugin>
                 <groupId>com.github.eirslett</groupId>
                 <artifactId>frontend-maven-plugin</artifactId>
-                <version>1.3</version>
+                <version>${frontend-maven-plugin.version}</version>
                 <configuration>
-                    <nodeVersion>v10.16.3</nodeVersion>
-                    <npmVersion>6.9.0</npmVersion>
+                    <nodeVersion>${frontend-maven-plugin.nodeVersion}</nodeVersion>
+                    <npmVersion>${frontend-maven-plugin.npmVersion}</npmVersion>
                     <workingDirectory>${basedir}</workingDirectory>
                 </configuration>
                 <executions>
@@ -90,9 +97,7 @@
                     </execution>
                 </executions>
             </plugin>
-
         </plugins>
     </build>
-
 
 </project>
