--- a/poker-after-dark-spring/pom.xml
+++ b/poker-after-dark-spring/pom.xml
@@ -13,6 +13,11 @@
     <name>Poker After Dark Spring</name>
     <description>Spring Runner for Poker After Dark</description>
 
+
+    <properties>
+        <swagger.version>2.9.2</swagger.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>com.slusarz.pokerafterdark</groupId>
@@ -41,6 +46,16 @@
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>${swagger.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>${swagger.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
