--- a/poker-after-dark-spring/src/main/resources/application.yml
+++ b/poker-after-dark-spring/src/main/resources/application.yml
@@ -8,6 +8,7 @@ security:
       timeout: 30
     password: $2a$10$USo5c35DK.myZW58z2GC0OUMhe0vcSaSq9tIPolXzYPHY3TwTQym6
 spring:
+  profile: SWAGGER
   datasource:
     url: ${JDBC_DATABASE_URL}
     username: ${JDBC_DATABASE_USERNAME}
@@ -20,6 +21,7 @@ spring:
         dialect: org.hibernate.dialect.PostgreSQLDialect
 logging:
   level:
+    org.springframework: trace
     org:
       springframework:
         web: trace
