--- a/poker-after-dark-spring/src/main/resources/application.yml
+++ b/poker-after-dark-spring/src/main/resources/application.yml
@@ -8,7 +8,8 @@ security:
       timeout: 30
     password: $2a$10$USo5c35DK.myZW58z2GC0OUMhe0vcSaSq9tIPolXzYPHY3TwTQym6
 spring:
-  profile: SWAGGER
+  profiles:
+    active: SWAGGER
   datasource:
     url: ${JDBC_DATABASE_URL}
     username: ${JDBC_DATABASE_USERNAME}
@@ -21,7 +22,6 @@ spring:
         dialect: org.hibernate.dialect.PostgreSQLDialect
 logging:
   level:
-    org.springframework: trace
     org:
       springframework:
         web: trace
