--- a/poker-after-dark-spring/pom.xml
+++ b/poker-after-dark-spring/pom.xml
@@ -13,9 +13,9 @@
     <name>Poker After Dark Spring</name>
     <description>Spring Runner for Poker After Dark</description>
 
-
     <properties>
         <swagger.version>2.9.2</swagger.version>
+        <spring-plugin-core.version>1.2.0.RELEASE</spring-plugin-core.version>
     </properties>
 
     <dependencies>
@@ -56,6 +56,11 @@
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger-ui</artifactId>
             <version>${swagger.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.plugin</groupId>
+            <artifactId>spring-plugin-core</artifactId>
+            <version>${spring-plugin-core.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
