--- a/poker-after-dark-infrastructure/pom.xml
+++ b/poker-after-dark-infrastructure/pom.xml
@@ -18,12 +18,10 @@
             <groupId>com.slusarz.pokerafterdark</groupId>
             <artifactId>poker-after-dark-application</artifactId>
         </dependency>
-
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <groupId>jakarta.persistence</groupId>
+            <artifactId>jakarta.persistence-api</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
