--- a/poker-after-dark-application/pom.xml
+++ b/poker-after-dark-application/pom.xml
@@ -13,6 +13,11 @@
     <name>Poker After Dark Application</name>
     <description>Application layer of Poker After Dark</description>
 
+    <properties>
+        <cucumber-java.version>2.3.1</cucumber-java.version>
+        <cucumber-junit.version>2.3.1</cucumber-junit.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>com.slusarz.pokerafterdark</groupId>
@@ -21,6 +26,34 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-java</artifactId>
+            <version>${cucumber-java.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-junit</artifactId>
+            <version>${cucumber-junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-el</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
