--- a/poker-after-dark-web/angular.json
+++ b/poker-after-dark-web/angular.json
@@ -39,6 +39,23 @@
                 }
               ]
             },
+            "demo": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.demo.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "aot": true,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true
+            },
             "production": {
               "fileReplacements": [
                 {
@@ -66,6 +83,9 @@
           "configurations": {
             "mock": {
               "browserTarget": "poker-after-dark-web:build:mock"
+            },
+            "demo": {
+              "browserTarget": "poker-after-dark-web:build:demo"
             },
             "production": {
               "browserTarget": "poker-after-dark-web:build:production"
